--- a/css/blog.css
+++ b/css/blog.css
@@ -11,10 +11,10 @@
 
 .blogContainer {
     display: grid;
-    max-width: 1280px;
+    max-width: 1366px;
     height: 100%;
     margin: 0 auto;
-    padding: 30px 0;
+    padding: 30px;
 }
 
     #closeBlog {
