--- a/css/blog.css
+++ b/css/blog.css
@@ -15,6 +15,7 @@
     height: 100%;
     margin: 0 auto;
     padding: 30px;
+    align-content: start;
 }
 
     #closeBlog {
@@ -36,11 +37,8 @@
 
         .blogContentHead {
             display: grid;
+            margin: 20px 0;
         }
-        
-            .blogContentHead .headTags {
-            }
-
                 .headTags a {
                     color: #454559;
                     font-size: 18px;
@@ -53,6 +51,7 @@
                 font-size: 48px;
                 font-weight: bold;
                 text-align: left;
+                margin-bottom: 10px;
             }
 
             .headInfo a {
@@ -67,7 +66,197 @@
 
         .thingsboardBody {
             display: grid;
+            margin: 20px 0;
         }
+
+            .thingsboardCover {
+                margin: 20px 0;
+            }
+
+                .thingsboardCover p {
+                    color: #f2f2ff;
+                    font-size: 24px;
+                }
+
+                .thingsboardCover a {
+                    color: #f2f2ff;
+                }
+
+                .thingsboardCover iframe {
+                    width: 100%;
+                    height: 700px;
+                    border-radius: 20px;
+                    box-shadow: 4px 4px 0 #454559;
+                    margin-top: 10px;
+                    margin-bottom: 40px;
+                }
+
+                .thingsboardCover img {
+                    content: url("../img/thingsboardrancang.png");
+                    width: 100%;
+                    border-radius: 20px;
+                    box-shadow: 4px 4px 0 #454559;
+                    margin-top: 10px;
+                }
+
+            .thingsboardContent {
+                margin: 20px 0;
+                text-align: left;
+            }
+
+                .thingsboardContent p, .thingsboardContent li, .thingsboardContent br {
+                    color: #f2f2ff;
+                    font-size: 32px;
+                }
+
+                .tbContent1, .tbContent2, .tbContent3, .tbContent4, .tbContent5 {
+                    margin: 40px 0;
+                }
+
+                .tbContent1 h3 {
+                    font-size: 36px;
+                    font-weight: bold;
+                    color: #f2f2ff;
+                    margin: 20px 0;
+                }
+
+                .tbContent1 h4, .tbContent2 h4, .tbContent3 h4, .tbContent4 h4, .tbContent5 h4 {
+                    font-size: 32px;
+                    font-weight: bold;
+                    color: #f2f2ff;
+                    margin: 20px 0;
+                }
+
+                .tbContent1 a {
+                    color: #f2f2ff;
+                }
+
+                    .deviceTb {
+                        display: flex;
+                        flex-wrap: wrap;
+                        margin: 40px 0;
+                    }
+
+                        .deviceTb1 {
+                            content: url("../img/add-device\ 1.png");
+                            height: 657px;
+                            border-radius: 20px;
+                            box-shadow: 4px 4px 0 #454559;
+                            margin-right: 30px;
+                            margin-bottom: 30px;
+                        }
+
+                        .deviceTb2 {
+                            content: url("../img/device-token\ 1.png");
+                            height: 427px;
+                            border-radius: 20px;
+                            box-shadow: 4px 4px 0 #454559;
+                            margin-right: 30px;
+                        }
+
+                .tbContent2 p {
+                    color: #f2f2ff;
+                    font-size: 32px;
+                    margin: 20px 0;
+                }
+                    
+                .tbContent2 input {
+                    color: #f2f2ff;
+                    font-size: 32px;
+                    background: rgba(227, 226, 242, 0.14);
+                    padding: 10px 15px;
+                    width: 60%;
+                    margin: 20px 0;
+                }
+
+                .tbContent2 .tb2Img1 {
+                    content: url("../img/prefrence\ 1.png");
+                    border-radius: 20px;
+                    box-shadow: 4px 4px 0 #454559;
+                    margin: 30px 0;
+                    width: 70%;
+                }
+
+                .tbContent2 .tb2Img2 {
+                    content: url("../img/esp32\ 1.png");
+                    border-radius: 20px;
+                    box-shadow: 4px 4px 0 #454559;
+                    margin: 30px 0;
+                    width: 70%;
+                }
+
+                .tbContent3 .tbLibrary {
+                    display: flex;
+                    width: 100%;
+                    flex-wrap: wrap;
+                }
+
+                    .lib1 {
+                        content: url("../img/thingsboard\ 1.png");
+                        margin-right: 20px;
+                        margin-top: 20px;
+                        border-radius: 20px;
+                        box-shadow: 4px 4px 0 #454559;
+                    }
+
+                    .lib2 {
+                        content: url("../img/pubsub\ 1.png");
+                        margin-right: 20px;
+                        margin-top: 20px;
+                        border-radius: 20px;
+                        box-shadow: 4px 4px 0 #454559;
+                    }
+
+                    .lib3 {
+                        content: url("../img/arduinohttpclient\ 1.png");
+                        margin-right: 20px;
+                        margin-top: 20px;
+                        border-radius: 20px;
+                        box-shadow: 4px 4px 0 #454559;
+                    }
+
+                    .lib4 {
+                        content: url("../img/arduinojson\ 1.png");
+                        margin-right: 20px;
+                        margin-top: 20px;
+                        border-radius: 20px;
+                        box-shadow: 4px 4px 0 #454559;
+                    }
+                    
+
+                .tbContent4 .textCode {
+                    font-size: 32px;
+                    color: #f2f2ff;
+                    background: rgba(227, 226, 242, 0.14);
+                    padding: 10px 15px;
+                    margin: 20px 0;
+                    width: 100%;
+                    height: 400px;
+                    overflow-y: scroll;
+                    font-family: 'Roboto Mono', monospace;
+                }
+        
+                .tbContent5 .displayTb {
+                    display: flex;
+                    flex-wrap: wrap;
+                    margin: 40px 0;
+                }
+
+                    .displayTb1 {
+                        content: url("../img/telemetry\ 1.png");
+                        margin-right: 20px;
+                        margin-bottom: 20px;
+                        border-radius: 20px;
+                        box-shadow: 4px 4px 0 #454559;                        
+                    }
+
+                    .displayTb2 {
+                        content: url("../img/dashboard\ 1.png");
+                        margin-right: 20px;
+                        margin-bottom: 20px;
+                        border-radius: 20px;
+                        box-shadow: 4px 4px 0 #454559;
+                    }
 
         .heightBody {
             display: grid;
