--- a/css/blog.css
+++ b/css/blog.css
@@ -411,27 +411,27 @@
             }
 
             .englishBody .english1 {
-                content: url("../img/english1.png");
+                content: url("../img/englishc1.png");
                 width: 100%;
             }
 
             .englishBody .english2 {
-                content: url("../img/english2.png");
+                content: url("../img/englishc2.png");
                 width: 100%;
             }
             
             .englishBody .english3 {
-                content: url("../img/english3.png");
+                content: url("../img/englishc3.png");
                 width: 100%;
             }
             
             .englishBody .english4 {
-                content: url("../img/english4.png");
+                content: url("../img/englishc4.png");
                 width: 100%;
             }
             
             .englishBody .english5 {
-                content: url("../img/english5.png");
+                content: url("../img/englishc5.png");
                 width: 100%;
             }
             
