--- a/css/contact.css
+++ b/css/contact.css
@@ -37,6 +37,44 @@ align-content: center;
             font-weight: lighter;
         }
 
+        .socialMedia {
+            padding: 20px;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;  
+        }
+
+            .socialContent {
+                display: grid;
+                padding: 20px;
+                margin: 20px auto;
+                cursor: pointer;
+                transition: all 0.4s;
+                text-decoration: none;
+            }
+
+                .socialContent:hover {
+                    transform: translateY(2%);
+                    filter:brightness(95%);
+                }
+
+                .socialContent i {
+                    font-size: 100px;
+                    color: #e3e2f2;
+                    margin: 10px 0;
+
+                }
+
+                .socialContent p {
+                    margin: 10px 0;
+                    font-size: 18px;
+                    font-weight: bold;
+                    color: #e3e2f2;
+
+                }
+
         .bodyContact {
         padding: 20px 0px;
         display: grid;
@@ -118,28 +156,31 @@ align-content: center;
             padding: 20px 0;
             width: 100%;
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
+            transition: all 0.4s;
         }
 
             .mobileContact a {
-                text-decoration: none;
                 display: flex;
-                color: #1a1a1d;
-                font-size: 20px;
-                font-weight: normal;
-                padding: 10px 20px;
-                background: #e3e2f2;
-                box-shadow: 3px 3px 0 #d6d5e2;
-                border-radius: 10px;
-                margin: 0 20px;
+                text-decoration: none;
+                transition: all 0.4s;
                 align-items: center;
-                justify-content: space-around;
+                padding: 10px 30px;
+            }
+
+            .mobileContact a:hover {
+                transform: translateY(2%);
+                filter:brightness(95%);
             }
 
             .mobileContact a i {
-                color: #f2f2ff;
-                background: #25d366;
-                padding: 10px;
-                border-radius: 50%;
-                margin-right: 15px;
+                font-size: 50px;
+                color: #e3e2f2;
+            }
+
+            .mobileContact a p {
+                font-size: 30px;
+                color: #e3e2f2;
+                margin: 10px;
             }
