--- a/css/home.css
+++ b/css/home.css
@@ -232,6 +232,69 @@ section {
         text-shadow: 3px 3px 0 #d6d5e2;
     }
 
+.socialMedia {
+    padding: 20px;
+}
+
+    .socialMedia .headSocial {
+        padding: 20px 0;
+        align-content: center;
+        justify-content: center;
+    }
+
+        .headSocial h1 {
+            font-size: 48px;
+            color: #1a1a1d;
+            font-weight: bold;
+            text-shadow: 3px 3px 0 #d6d5e2;            
+        }
+
+        .headSocial h3 {
+            color: #1a1a1d;
+            font-size: 24px;
+            font-weight: lighter;            
+        }
+
+.socialMedia2 {
+    padding: 50px 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+    .socialContent {
+        display: grid;
+        padding: 20px;
+        margin: 20px auto;
+        cursor: pointer;
+        transition: all 0.4s;
+        text-decoration: none;
+    }
+
+        .socialContent:hover {
+            transform: translateY(2%);
+        }
+
+        .socialContent i {
+            font-size: 100px;
+            color: #1a1a1d;
+            margin: 10px 0;
+            text-shadow: 3px 3px 0 #d6d5e2;
+        }
+
+        .socialContent p {
+            margin: 10px 0;
+            font-size: 18px;
+            font-weight: bold;
+            color: #F2F2FF;
+            background: #c3073f;
+            border-radius: 10px;
+            width: 122px;
+            box-shadow: 3px 3px 0 #d6d5e2;
+        }
+
 .contact {
     padding-bottom: 20px;
 }
